# quantities

./: .gitignore  .travis.yml  CHANGES.md  LICENSE  README.md  cabal.sandbox.config  jinquantities.cabal  quantities.cabal  quantities.hs
test-suite/: DocCoverage.hs  HLint.hs  HPC.hs  Haddock.hs  QuantitiesSpec.hs
test-suite/Data/: QuantitiesSpec.hs
test-suite/Data/Quantities/: ConstructorsSpec.hs  ConvertSpec.hs  DataSpec.hs  DefinitionParserSpec.hs  DefinitionsSpec.hs  ExprParserSpec.hs
