name:                 quantities
version:              0.1.0
Author:               John David Reaver <jdreaver@adlerhorst.com>
Maintainer:           John David Reaver <jdreaver@adlerhorst.com>
build-type:           Simple
cabal-version:        >= 1.18
copyright:            2014 John David Reaver
license:              MIT
description:          Unit conversion and manipulation library.


library
    default-language: Haskell2010
    exposed-modules:  Data.Quantities
    hs-source-dirs:   library
    ghc-options:      -Wall -O2
    build-depends:    base, containers

test-suite hspec
    build-depends:    base, quantities, hspec == 1.8.*, containers
    default-language: Haskell2010
    ghc-options:      -Wall
    hs-source-dirs:   test-suite library
    main-is:          Spec.hs
    type:             exitcode-stdio-1.0

test-suite hlint
    build-depends:    base, hlint == 1.8.*
    default-language: Haskell2010
    hs-source-dirs:   test-suite
    main-is:          HLint.hs
    type:             exitcode-stdio-1.0