name:                 quantities
version:              0.1.0
Author:               John David Reaver <jdreaver@adlerhorst.com>
Maintainer:           John David Reaver <jdreaver@adlerhorst.com>
build-type:           Simple
cabal-version:        >= 1.18
copyright:            2014 John David Reaver
license:              MIT
description:          Unit conversion and manipulation library.


library
    default-language: Haskell2010
    exposed-modules:  Data.Quantities
    hs-source-dirs:   library
    ghc-options:      -Wall -O
    build-depends:    base, containers, mtl, parsec
    other-modules:    Data.Quantities.Convert
                    , Data.Quantities.Data
                    , Data.Quantities.DefaultUnits
                    , Data.Quantities.Definitions
                    , Data.Quantities.DefinitionParser
                    , Data.Quantities.ExprParser

test-suite hspec
    default-language: Haskell2010
    ghc-options:      -Wall
    hs-source-dirs:   test-suite library
    main-is:          Spec.hs
    type:             exitcode-stdio-1.0
    build-depends:    base, quantities, hspec, containers, mtl, parsec

test-suite hlint
    build-depends:    base, hlint
    default-language: Haskell2010
    hs-source-dirs:   test-suite
    main-is:          HLint.hs
    type:             exitcode-stdio-1.0